# chefformer

./: .dockerignore  .gitignore  Makefile  README.md  Recipe.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test2.ipynb
app/: main.py  ui.py
app/evaluation/: evaluation_ui.py
app/routers/: chat.py
config/: ModelSettings.py  settings.py
configs/inference/: settings.py
configs/shared/: settings.py
configs/training/: settings.py
database/: MongoDBClient.py
deprecated/: GeminiFlash.py
deprecated/prompts/: CleaningPromptTemplates.py
docker/training/: train_model
loggers/: base.py  composite_logger.py  console_logger.py  csv_logger.py  tensorboard_logger.py
makefiles/: inference.mk  train.mk
model/: MongoDBClient.py  Recipe.py  datasets.py  model.py
notebooks/training/: plot_learning_rate_schedule.ipynb
notebooks/training/model_modules/: compute_loss.py  multihead_attention.py  tensor_shapes.ipynb
notebooks/training/recipe_prep/: 01_merge_jsons.py  02_mongodb_insert.py  04_clean_recipes.py  05_evaluate_cleaning.ipynb  (+1 more)
notes/: goal.md  training.md  transformer_architecture.md
preprocessing/: 01_merge_jsons.py  02_mongodb_insert.py  03_explore_data_issues.ipynb  04_clean_recipes.py  05_evaluate_cleaning.ipynb  TextCleaner.py  check_seq_lengths.ipynb
preprocessing/prompts/: CleaningPromptTemplates.py
src/evaluation/: evaluate.py  metrics.py
src/inference/: engine.py  utils.py
src/training/: data_factory.py  engine.py  train.py
training/: helper_functions.py  plot_learning_rate_schedule.py  pretraining.py
(+9 files in other folders)
